--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,10 @@
+@import "node_modules/font-awesome/scss/font-awesome.scss";
+@import "_variables";
 @import "_global";
+@import "_header";
+@import "_main";
+@import "_comics";
+@import "_cards";
+@import "_links";
+@import "_socials";
+
